--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
                             <b>Address:</b> Room 408, No. 4800, Caoan highway, Shanghai, China.
                         </dl>
                         <dl class="alt">
-                            <img src="" alt="tongjimail" border="0">
+                            <!-- <img src="" alt="tongjimail" border="0"> -->
                             <!-- <b>Mail:</b> kaifengh<img src="images/tongjimail.png" style="width:112px;height:17px;" alt=""></a> -->
-                            <b>Mail:</b> kaifengh<img src="https://s1.imagehub.cc/images/2024/09/29/1ae071442731e70477a6a3bc4c915cc8.png" style="width:112px;height:17px;" alt=""></a>
+                            <b>Mail:</b>&nbsp;kaifengh<img src="https://s1.imagehub.cc/images/2024/09/29/1ae071442731e70477a6a3bc4c915cc8.png" style="width:112px;height:17px;" alt=""></a>
                         </dl>
                         <dl class="contact-icons color1">
                             <!-- <h2>Links:</h2> -->
