--- a/index_template.html
+++ b/index_template.html
@@ -65,7 +65,8 @@
 
 
                 <div class="pic">
-                    <img class="avatar is-rounded is-188x188" src="https://s1.imagehub.cc/images/2024/09/29/81afdbe04a0818c553a4a5348e6f5ce8.jpeg" alt="[]">
+                    <img class="avatar is-rounded is-188x188" src="https://i.postimg.cc/Twt9sWkR/avatar.jpg" alt="[]">
+                    <!-- <img class="avatar is-rounded is-188x188" src="https://s1.imagehub.cc/images/2024/09/29/81afdbe04a0818c553a4a5348e6f5ce8.jpeg" alt="[]"> -->
                     <!-- <img class="avatar is-rounded is-188x188" src="images/avatar.jpeg" alt="[]"> -->
                 </div>
 
@@ -109,7 +110,9 @@
                                     </div> -->
                                 </td>
                                 <td width="30%">
-                                    <img src="https://s1.imagehub.cc/images/2024/09/29/d528c408f919219807720bc4dd882970.png" alt="highlights vmud">
+                                    
+                                    <img src="https://i.postimg.cc/jdL8GZ0B/highlights-vmud.png" alt="highlights vmud">
+                                    <!-- <img src="https://s1.imagehub.cc/images/2024/09/29/d528c408f919219807720bc4dd882970.png" alt="highlights vmud"> -->
                                     <!-- <img src="images/highlights/highlights-vmud.png" alt="alt "> -->
                                 </td>
                             </tr>
@@ -127,7 +130,8 @@
                                     </div> -->
                                 </td>
                                 <td width="30%">
-                                    <img src="https://s1.imagehub.cc/images/2024/09/29/dd281048c6aaa3bb781ceba568e4571e.png" alt="highlights vision">
+                                    <img src="https://i.postimg.cc/ncgdZBnr/highlights-vision.png" alt="highlights vision">
+                                    <!-- <img src="https://s1.imagehub.cc/images/2024/09/29/dd281048c6aaa3bb781ceba568e4571e.png" alt="highlights vision"> -->
                                     <!-- <img src="images/highlights/highlights-vision.png" alt="alt "> -->
                                     <!-- <img src="images/highlights/highlights-vision.png" alt="alt "> -->
                                 </td>
@@ -144,7 +148,9 @@
                                     </div> -->
                                 </td>
                                 <td width="30%">
-                                    <img src="https://s1.imagehub.cc/images/2024/09/29/9b0c6fcf8f34bda3c879584212b4c123.png" alt="hl1">
+                                    
+                                    <!-- <img src="https://s1.imagehub.cc/images/2024/09/29/9b0c6fcf8f34bda3c879584212b4c123.png" alt="hl1"> -->
+                                    <img src="https://i.postimg.cc/MZsPPg4y/hl1.png" alt="hl1">
                                     <!-- <img src="images/highlights/hl1.png" alt="alt "> -->
                                 </td>
                             </tr>
@@ -178,26 +184,26 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
 
                             <li>
                                 <!-- <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>. -->
-                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
+                                    <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection" is accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a>.
                                     </p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="https://s1.imagehub.cc/images/2024/09/29/bb51c3eb60c14797be24387159e038b5.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
                                     in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
@@ -374,7 +380,7 @@
                         <dl class="alt">
                             <!-- <img src="" alt="tongjimail" border="0"> -->
                             <!-- <b>Mail:</b> kaifengh<img src="images/tongjimail.png" style="width:112px;height:17px;" alt=""></a> -->
-                            <b>Mail:</b>&nbsp;kaifengh<img src="https://s1.imagehub.cc/images/2024/09/29/1ae071442731e70477a6a3bc4c915cc8.png" style="width:112px;height:17px;" alt=""></a>
+                            <b>Mail:</b>&nbsp;kaifengh<img src="https://i.postimg.cc/CKHJj2kn/tongjimail.png" style="width:112px;height:17px;" alt=""></a>
                         </dl>
                         <dl class="contact-icons color1">
                             <!-- <h2>Links:</h2> -->
