--- a/index_template.html
+++ b/index_template.html
@@ -184,6 +184,12 @@
                     <div class="content">
                         <ul>
                             <li>
+                                <p><span class="mydate"><strong>[2024.10]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
+                                </p>
+                                <p></p>
+                            </li>
+
+                            <li>
                                 <p><span class="mydate"><strong>[2024.08]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching" is accepted by <a href="https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html">CCS 2024</a>.
                                 </p>
                                 <p></p>
