--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         <dl class="alt">
                             <!-- <img src="images/location.svg" style="width:50px;height:50px;" alt=""> -->
                             <!-- <h2 >Address:</h2> -->
-                            <b>Address:</b> Room 408, No. 4800, Caoan highway, Shanghai, China.
+                            <b>Address:</b> Room 408R, Jishi Building, No. 4800, Caoan highway, Shanghai, China.
                         </dl>
                         <dl class="alt">
                             <!-- <img src="" alt="tongjimail" border="0"> -->
