--- a/index_template.html
+++ b/index_template.html
@@ -122,7 +122,7 @@
                                 <td width="70%">
                                     <strong>Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities.</strong>&nbsp;
                                     Susheng Wu, Ruisi Wang,  <u>Kaifeng Huang</u>, Yiheng Cao, Wenyan Song, Zhuotong Zhou, Yiheng Huang, Bihuan Chen, Xin Peng. 
-                                    &nbsp; <em>In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, accepted, 2024.</em>
+                                    &nbsp; <em>In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, pp. 1447-1459, 2024.</em>
                                     <br>
                                     <!-- <div>
                                         <button type="button" class="btn btn-outline-dark">PDF</button>
