--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                         in 2022, supervised by <a href="https://cspengxin.github.io/">Prof. Xin Peng</a> and <a href="https://chenbihuan.github.io/">Prof. Bihuan Chen</a>.
                     </p>
                     <p>
-                        His research interests focus on open source software supply chain, software security and software evolution. He serves in the reviewer panels and program committees of Transactions on Software Engineering, Journal of Systems & Software, ASE 2024, ISSRE
-                        2024, ICSE AE 2023, etc. He was the awardee of the ACM SIGSOFT Distinguished Paper Award at ASE 2018 and IEEE TCSE Distinguished Paper Award at ICSME 2020.
+                        His research interests focus on open source software supply chain, software security and software evolution. He serves in the reviewer panels and program committees of IEEE Transactions on Software Engineering, ACM Transactions on Software Engineering and Methodology, Journal of Systems & Software, ASE 2024, ISSRE 2024, ICSE AE 2023, etc. He was the awardee of the ACM SIGSOFT Distinguished Paper Award at ASE 2018 and IEEE TCSE Distinguished Paper Award at ICSME 2020.
 
                         <!-- He has published ten peer-reviewed papers at top journals/conferences including ICSE, ESEC/FSE, ASE, EMSE, etc. -->
                     </p>
