--- a/index_template.html
+++ b/index_template.html
@@ -37,7 +37,7 @@
             <a href="#home" class="icon solid fa-home"><span>Home</span></a>
             <a href="#news" class="icon solid fa-bullhorn"><span>News</span></a>
             <a href="#publication" class="icon solid fa-book"><span>Publications</span></a>
-            <!-- <a href="#education" class="icon solid fa-graduation-cap"><span>Background</span></a> -->
+            <a href="#tools" class="icon solid fa-wrench"><span>Tools</span></a>
             <a href="#service" class="icon solid fa-share-alt"><span>Service</span></a>
             <a href="#contact" class="icon solid fa-comments"><span>Contacts</span></a>
             <!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
@@ -56,8 +56,7 @@
                         in 2022, supervised by <a href="https://cspengxin.github.io/">Prof. Xin Peng</a> and <a href="https://chenbihuan.github.io/">Prof. Bihuan Chen</a>.
                     </p>
                     <p>
-                        His research interests focus on open source software supply chain, software security and software evolution. He serves in the reviewer panels and program committees of Transactions on Software Engineering, Journal of Systems & Software, ASE 2024, ISSRE
-                        2024, ICSE AE 2023, etc. He was the awardee of the ACM SIGSOFT Distinguished Paper Award at ASE 2018 and IEEE TCSE Distinguished Paper Award at ICSME 2020.
+                        His research interests focus on open source software supply chain, software security and software evolution. He serves in the reviewer panels and program committees of IEEE Transactions on Software Engineering, ACM Transactions on Software Engineering and Methodology, Journal of Systems & Software, ASE 2024, ISSRE 2024, ICSE AE 2023, etc. He was the awardee of the ACM SIGSOFT Distinguished Paper Award at ASE 2018 and IEEE TCSE Distinguished Paper Award at ICSME 2020.
 
                         <!-- He has published ten peer-reviewed papers at top journals/conferences including ICSE, ESEC/FSE, ASE, EMSE, etc. -->
                     </p>
@@ -76,17 +75,19 @@
                     <div class="row">
                         <ul>
                             <li>
-                                <p><strong>OSS Supply Chain.&nbsp;</strong></span>Open Source Software has never been more popular over the past decade. The flourishing OSS community has advanced significantly on how we depend and develop software, making
-                                    the process closely connected to <i>OSS Supply Chain</i>. Yet security, legal and maintenance risks persist and grow in <i>OSS Supply Chain</i>. Our mission is to assess risks and provide mitigation on <i>OSS Supply Chain</i>                                    from multiple dimensions (e.g., software lifecycle, programming language, application domain, etc).</p>
+                                <p><strong>Software&AI Supply Chain.&nbsp;</strong></span> Software and AI systems are inherently complex. Achieving a clear assessment of <i>security, maintenance, and legal risks</i> in <i>the software and AI supply chain</i>, along with developing <i>effective mitigation strategies</i>, remains a significant challenge. Our mission is to simplify this process by providing comprehensive evaluations and actionable solutions that enhance security and compliance throughout the lifecycle of software and AI systems.
                                 <p></p>
                             </li>
 
                             <li>
                                 <p>
-                                    <strong>OSS Software Evolution.&nbsp;</strong>
-                                    </span>Software evolves as new features being added, refactorings being adopted and defects being fixed. The downstream software consumers could not consistently be in sync with the upstream software providers as they
-                                    release new versions, leading to fragmented version adoption. Our goal is to access the evolutionary pain it brings to downstream software and provide automatic techniques to ease that pain.</p>
-
+                                    <strong>Software Security.&nbsp;</strong>
+                                    </span>The software system is vulnerable to security issues. We are interested in but not limited to topics such as software <i>vulnerability detection/assessment/mitigation</i>, <i>malicious software/AIWare/LLMWare detection</i>, and <i>privacy protection</i>. Our goal is to identify potential security risks and prevent the leakage of sensitive privacy information (e.g., LLM privacy).</p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Software Evolution.&nbsp;</strong>
+                                    </span>The software evolves constantly, leading to issues like <i>version fragmentation</i>, <i>API incompatibility</i>, <i>API deprecation</i>, and <i>merge conflict</i>. Our goal is to assess the challenges this evolution presents to downstream software and provide automated techniques to alleviate these issues.</p>
                             </li>
                         </ul>
                     </div>
@@ -323,14 +324,49 @@
                         </ol>
                     </div>
                 </section>
+                <a href="#tools">
+                    <span class="arrow icon solid fa-chevron-right"><span></span></span>
+                </a>
+            </article>
+
+
+            <!-- Tools -->
+            <article id="tools" class="panel">
+                <a href="#publication">
+                    <span class="arrowl icon solid fa-chevron-left"><span></span></span>
+                </a>
+                <header>
+                    <h2>Tools</h2>
+                </header>
+                <hr class="rounded3">
+                <section>
+                    <div class="content">
+                        <h2>CVEs found by <a href="">VMUD</a>:</h3>
+                        <ul>
+                            <li><a>CVE-2024-29645</a>: in radareorg/radare2</li> 
+                            <li><a>CVE-2024-29646</a>: in radareorg/radare2</li>
+                            <li><a>CVE-2024-31668</a>: in rizinorg/rizin</li>
+                            <li><a>CVE-2024-31669</a>: in rizinorg/rizin</li>
+                            <li><a>CVE-2024-31670</a>: in rizinorg/rizin</li>
+                            <li><a>CVE-2023-41080</a>: in apache/tomcat</li>
+                            <li><a>CVE-2023-51437</a>: in apache/pulsar</li>
+                            <li><a>CVE-2024-24891</a>: in src-openEuler/kernel</li>
+                            <li><a>CVE-2024-24898</a>: in src-openEuler/kernel</li>
+                        </ul>
+
+                    </div>
+                </section>
+
                 <a href="#service">
                     <span class="arrow icon solid fa-chevron-right"><span></span></span>
                 </a>
             </article>
 
+
+
             <!-- Services -->
             <article id="service" class="panel">
-                <a href="#education">
+                <a href="#tools">
                     <span class="arrowl icon solid fa-chevron-left"><span></span></span>
                 </a>
                 <header>
